salesforce-port/force-app/main/default/objects/Waypoint__c/Waypoint__c.object-meta.xml
<CustomObject>
    <label>Waypoint</label>
    <nameField><displayFormat>WP-{000000}</displayFormat><label>Waypoint Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Waypoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>