salesforce-port/force-app/main/default/objects/Waypoint__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>Text</type>
    <length>255</length>
</CustomField>